sans-serif in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,7 +264,7 @@ button:focus {
 }
 
 .span-footer {
-    font-family: Raleway; 
+    font-family: Raleway, sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
