--- a/css/styles.css
+++ b/css/styles.css
@@ -148,10 +148,20 @@ button:focus {
 }
 
 .section-our-team {
-    background: var(--CLOUD, #FFFFFF);
+    background: var(--CLOUD, #F4F4FD);
     width: 1440px;
    }
-
+.spesialist{
+    border-radius: 0px 0px 4px 4px;
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    display: inline-flex;
+    padding-bottom: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+}
 .our-team {
     text-align: center;
     /* Header 2 */
@@ -192,8 +202,19 @@ button:focus {
 
 .section-our-portfolio {
     background: #FFFFFF;
-    }
-
+        }
+.portfolio-place{
+    display: flex;
+    width: 360px;
+    height: 420px;
+    padding-bottom: 0px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    flex-shrink: 0;
+    border: 1px solid var(--CORNFLOWER, #E7E9FC);
+    background: var(--WHITE, #FFF);
+}
 .our-portfolio {
     text-align: center;
     /* Header 2 */
@@ -252,7 +273,7 @@ button:focus {
 }
 
 .logotype-footer {
-    font-family: Raleway; 
+    font-family: Raleway, sans-serif; 
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
